--- a/custom_components/openai_music/manifest.json
+++ b/custom_components/openai_music/manifest.json
@@ -8,6 +8,6 @@
     "integration_type": "service",
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/hokiebrian/openai_music/issues",
-    "requirements": [],
-    "version": "1.0.1"
+    "requirements": ["openai"],
+    "version": "1.0.2"
   }
